--- a/board13.html
+++ b/board13.html
@@ -10,7 +10,7 @@
     <td width=42><b>Mike</b></td>
     <td width=42><b>John</b></td>
     <td width=42><b>Roger</b></td>
-    <td width=42><b>Rich</b></td></tr>
+    <td width=42><b>Rich</b></td>
     <td width=42><b>Brian</b></td>
     <td width=42><b>Grant</b></td>
     <td width=42><b>States</b></td></tr>
