--- a/scoring.html
+++ b/scoring.html
@@ -101,11 +101,11 @@
     an owner can make.</td></tr>
 <tr><td>Pick Up Amount</td>
     <td>Each owner gets five pick ups.  An additional pick up is awarded for
-    each player placed on season ending IR prior to the end of the week 15
-    games (fantasy playoff start).  All pick ups may be traded.  An
-    untradable free pick up is awarded for each player drafted that is cut
-    and not on an NFL roster, as long as the player is replaced prior to the
-    start of regular season.</td></tr>
+    each player that is either placed on IR or cut and not on an NFL roster,
+    prior to the end of the week 15 games (fantasy playoff start).  All pick
+    ups may be traded.  An untradable free pick up is awarded for each
+    player drafted that is cut and not on an NFL roster, as long as the
+    player is replaced prior to the start of regular season.</td></tr>
 <tr><td>Pick Up Deadline</td>
     <td>Pick up requests that are made prior to midnight Tuesday will not be
     granted until Wednesday morning.  The priority order is based on win/loss
