--- a/board18.html
+++ b/board18.html
@@ -26,16 +26,16 @@
     <td>Kareem<br>Hunt</td>
     <td>Melvin<br>Gordon</td></tr>
 <tr><td>2</td>
-    <td>Sam<br>Darnold</td>
-    <td>DeAndre<br>Hopkins</td>
-    <td>Dalvin<br>Cook</td>
-    <td>Davante<br>Adams</td>
-    <td>Odell<br>Beckham</td>
-    <td>Julio<br>Jones</td>
-    <td>Devonta<br>Freeman</td>
-    <td>Christian<br>McCaffrey</td>
+    <td>Rob<br>Gronkowski</td>
     <td>Aaron<br>Rodgers</td>
-    <td>Rob<br>Gronkowski</td></tr>
+    <td>Christian<br>McCaffrey</td>
+    <td>Devonta<br>Freeman</td>
+    <td>Julio<br>Jones</td>
+    <td>Odell<br>Beckham</td>
+    <td>Davante<br>Adams</td>
+    <td>Dalvin<br>Cook</td>
+    <td>DeAndre<br>Hopkins</td>
+    <td>Sam<br>Darnold</td></tr>
 <tr><td>3</td>
     <td>Daniel<br>Carlson</td>
     <td>Jimmy<br>Graham</td>
@@ -48,16 +48,16 @@
     <td>Josh<br>Rosen</td>
     <td>Keenan<br>Allen</td></tr>
 <tr><td>4</td>
-    <td>Deshaun<br>Watson</td>
-    <td>Derrick<br>Henry</td>
-    <td>Tyreek<br>Hill</td>
-    <td>Alex<br>Collins</td>
-    <td>LeSean<br>McCoy</td>
-    <td>Kenyan<br>Drake</td>
-    <td>Josh<br>Allen</td>
-    <td>Adam<br>Thielen</td>
+    <td>Stefon<br>Diggs</td>
     <td>Marshawn<br>Lynch</td>
-    <td>Stefon<br>Diggs</td></tr>
+    <td>Adam<br>Thielen</td>
+    <td>Josh<br>Allen</td>
+    <td>Kenyan<br>Drake</td>
+    <td>LeSean<br>McCoy</td>
+    <td>Alex<br>Collins</td>
+    <td>Tyreek<br>Hill</td>
+    <td>Derrick<br>Henry</td>
+    <td>Deshaun<br>Watson</td></tr>
 <tr><td>5</td>
     <td>JuJu<br>Smith-Schuster</td>
     <td>Mike<br>Evans</td>
@@ -70,16 +70,16 @@
     <td>Doug<br>Baldwin</td>
     <td>Kerryon<br>Johnson</td></tr>
 <tr><td>6</td>
-    <td>Josh<br>Gordon</td>
-    <td>Dion<br>Lewis</td>
-    <td>Zach<br>Ertz</td>
-    <td>Tom<br>Brady</td>
-    <td>Rashaad<br>Penny</td>
-    <td>Russell<br>Wilson</td>
-    <td>Brandin<br>Cooks</td>
-    <td>Drew<br>Brees</td>
+    <td>Tevin<br>Coleman</td>
     <td>Demaryius<br>Thomas</td>
-    <td>Tevin<br>Coleman</td></tr>
+    <td>Drew<br>Brees</td>
+    <td>Brandin<br>Cooks</td>
+    <td>Russell<br>Wilson</td>
+    <td>Rashaad<br>Penny</td>
+    <td>Tom<br>Brady</td>
+    <td>Zach<br>Ertz</td>
+    <td>Dion<br>Lewis</td>
+    <td>Josh<br>Gordon</td></tr>
 <tr><td>7</td>
     <td>Aaron<br>Jones</td>
     <td>Christian<br>Kirk</td>
@@ -92,16 +92,16 @@
     <td>Chris<br>Hogan</td>
     <td>Greg<br>Olsen</td></tr>
 <tr><td>8</td>
-    <td>Jordan<br>Wilkins</td>
-    <td>Kalen<br>Ballage</td>
-    <td>Jason<br>Sanders</td>
-    <td>Kyle<br>Rudolph</td>
-    <td>Carlos<br>Hyde</td>
-    <td>Allen<br>Robinson</td>
-    <td>Calvin<br>Ridley</td>
-    <td>Jamaal<br>Williams</td>
+    <td>John<br>Kelly</td>
     <td>Nick<br>Chubb</td>
-    <td>John<br>Kelly</td></tr>
+    <td>Jamaal<br>Williams</td>
+    <td>Calvin<br>Ridley</td>
+    <td>Allen<br>Robinson</td>
+    <td>Carlos<br>Hyde</td>
+    <td>Kyle<br>Rudolph</td>
+    <td>Jason<br>Sanders</td>
+    <td>Kalen<br>Ballage</td>
+    <td>Jordan<br>Wilkins</td></tr>
 <tr><td>9</td>
     <td>Alshon<br>Jeffery</td>
     <td>Marquise<br>Goodwin</td>
@@ -114,16 +114,16 @@
     <td>Rex<br>Burkhead</td>
     <td>Corey<br>Davis</td></tr>
 <tr><td>10</td>
-    <td>Peyton<br>Barber</td>
-    <td>Greg<br>Joseph</td>
-    <td>Kirk<br>Cousins</td>
-    <td>Pierre<br>Garcon</td>
-    <td>Baker<br>Mayfield</td>
-    <td>Evan<br>Engram</td>
-    <td>Nyheim<br>Hines</td>
-    <td>Patrick<br>Mahomes</td>
+    <td>Matt<br>Ryan</td>
     <td>CJ<br>Anderson</td>
-    <td>Matt<br>Ryan</td></tr>
+    <td>Patrick<br>Mahomes</td>
+    <td>Nyheim<br>Hines</td>
+    <td>Evan<br>Engram</td>
+    <td>Baker<br>Mayfield</td>
+    <td>Pierre<br>Garcon</td>
+    <td>Kirk<br>Cousins</td>
+    <td>Greg<br>Joseph</td>
+    <td>Peyton<br>Barber</td></tr>
 <tr><td>11</td>
     <td>Dak<br>Prescott</td>
     <td>Jaylen<br>Samuels</td>
@@ -136,16 +136,16 @@
     <td>Jimmy<br>Garoppolo</td>
     <td>Jared<br>Goff</td></tr>
 <tr><td>12</td>
-    <td>Jordan<br>Reed</td>
-    <td>Ben<br>Roethlisberger</td>
-    <td>Eddy<br>Pineiro</td>
-    <td>Jameis<br>Winston</td>
-    <td>Isaiah<br>Crowell</td>
-    <td>Anthony<br>Miller</td>
-    <td>David<br>Njoku</td>
-    <td>Kenny<br>Golladay</td>
+    <td>Latavius<br>Murray</td>
     <td>Tarik<br>Cohen</td>
-    <td>Latavius<br>Murray</td></tr>
+    <td>Kenny<br>Golladay</td>
+    <td>David<br>Njoku</td>
+    <td>Anthony<br>Miller</td>
+    <td>Isaiah<br>Crowell</td>
+    <td>Jameis<br>Winston</td>
+    <td>Eddy<br>Pineiro</td>
+    <td>Ben<br>Roethlisberger</td>
+    <td>Jordan<br>Reed</td></tr>
 <tr><td>13</td>
     <td>Jarvis<br>Landry</td>
     <td>DJ<br>Chark</td>
@@ -158,16 +158,16 @@
     <td>Robby<br>Anderson</td>
     <td>Sterling<br>Shepard</td></tr>
 <tr><td>14</td>
-    <td>Julian<br>Edelman</td>
-    <td>Jack<br>Doyle</td>
-    <td>Robert<br>Woods</td>
-    <td>Bilal<br>Powell</td>
-    <td>Courtland<br>Sutton</td>
-    <td>Chris<br>Thompson</td>
-    <td>Justin<br>Tucker</td>
-    <td>Keelan<br>Cole</td>
+    <td>Harrison<br>Butker</td>
     <td>Austin<br>Hooper</td>
-    <td>Harrison<br>Butker</td></tr>
+    <td>Keelan<br>Cole</td>
+    <td>Justin<br>Tucker</td>
+    <td>Chris<br>Thompson</td>
+    <td>Courtland<br>Sutton</td>
+    <td>Bilal<br>Powell</td>
+    <td>Robert<br>Woods</td>
+    <td>Jack<br>Doyle</td>
+    <td>Julian<br>Edelman</td></tr>
 <tr><td>15</td>
     <td>Malcolm<br>Brown</td>
     <td>Kelvin<br>Benjamin</td>
@@ -180,16 +180,16 @@
     <td>Devante<br>Parker</td>
     <td>Jake<br>Elliott</td></tr>
 <tr><td>16</td>
-    <td>James<br>Washington</td>
-    <td>Chase<br>Edmonds</td>
-    <td>Golden<br>Tate</td>
-    <td>Allen<br>Hurns</td>
-    <td>Kaare<br>Vedvik</td>
-    <td>Dallas<br>Goedert</td>
-    <td>Doug<br>Martin</td>
-    <td>Steven<br>Hauschka</td>
+    <td>Hayden<br>Hurst</td>
     <td>Matt<br>Bryant</td>
-    <td>Hayden<br>Hurst</td></tr>
+    <td>Steven<br>Hauschka</td>
+    <td>Doug<br>Martin</td>
+    <td>Dallas<br>Goedert</td>
+    <td>Kaare<br>Vedvik</td>
+    <td>Allen<br>Hurns</td>
+    <td>Golden<br>Tate</td>
+    <td>Chase<br>Edmonds</td>
+    <td>James<br>Washington</td></tr>
 <tr><td>17</td>
     <td>Bo<br>Scarbrough</td>
     <td>Andy<br>Dalton</td>
@@ -202,14 +202,14 @@
     <td>Robbie<br>Gould</td>
     <td>Matt<br>Breida</td></tr>
 <tr><td>18</td>
-    <td>KhaDarel<br>Hodge</td>
-    <td>Vernon<br>Davis</td>
-    <td>Antonio<br>Callaway</td>
-    <td>Chris<br>Ivory</td>
-    <td>Giovani<br>Bernard</td>
-    <td>Chris<br>Boswell</td>
-    <td>Ty<br>Montgomery</td>
-    <td>Ricky<br>Seals-Jones</td>
+    <td>Frank<br>Gore</td>
     <td>Josh<br>Lambo</td>
-    <td>Frank<br>Gore</td></tr>
+    <td>Ricky<br>Seals-Jones</td>
+    <td>Ty<br>Montgomery</td>
+    <td>Chris<br>Boswell</td>
+    <td>Giovani<br>Bernard</td>
+    <td>Chris<br>Ivory</td>
+    <td>Antonio<br>Callaway</td>
+    <td>Vernon<br>Davis</td>
+    <td>KhaDarel<br>Hodge</td></tr>
 </table>
