--- a/pickups.html
+++ b/pickups.html
@@ -1,210 +1,146 @@
 <table cellpadding=0 cellspacing=0 width=650 border=0>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Jacquizz Rodgers/CJ Prosise</td>
-<td width=50>9/12</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Corey Clement/George Kittle</td>
-<td width=50>9/26</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Chris Johnson/Rex Burkhead</td>
-<td width=50>9/19</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Traded to States</td>
-<td width=50>9/28</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Orleans Darkwa/Chris Johnson</td>
-<td width=50>10/17</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Aaron Jones/Jamaal Williams</td>
-<td width=50>10/11</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Thomas Rawls/Jacquizz Rodgers</td>
-<td width=50>11/9</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Jamaal Williams/John Ross</td>
-<td width=50>11/28</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Aaron Rodgers/Thomas Rawls</td>
-<td width=50>12/12</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Traded to Grant</td>
-<td width=50>12/22</td>
-</tr></table></td>
-</tr>
-<tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Cameron Brate/Jared Cook</td>
-<td width=50>10/16</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Matt Breida/Younghoe Koo</td>
-<td width=50>10/12</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>OJ Howard/Matt Dayes</td>
-<td width=50>11/29</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Kenyan Drake/Thomas Rawls</td>
-<td width=50>10/31</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Keelan Cole/Patrick Mahomes</td>
-<td width=50>12/23</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Greg Olsen/Stephen Gostkowski</td>
-<td width=50>11/8</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Antonio Gates/OJ Howard</td>
-<td width=50>12/27</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Blake Bortles/Jalen Richard</td>
-<td width=50>11/8</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Jimmy Garoppolo/Cameron Brate</td>
-<td width=50>12/27</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Sterling Shepard/David Njoku</td>
-<td width=50>11/18</td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Alex Collins/Javorius Allen</td>
-<td width=50>10/3</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Carson Wentz/Adrian Peterson</td>
-<td width=50>9/19</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Carson Palmer/Mike Wallace</td>
-<td width=50>10/8</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Cody Parkey/Brandon Marshall</td>
-<td width=50>9/22</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Austin Ekeler/Trevor Siemian</td>
-<td width=50>11/14</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Latavius Murray/Darren McFadden</td>
-<td width=50>10/3</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Tion Green/Austin Hooper</td>
-<td width=50>12/10</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Jerick McKinnon/Aldrick Rosas</td>
-<td width=50>10/11</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Marquise Goodwin/Emmanuel Sanders</td>
-<td width=50>12/31</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Robby Anderson/Jamison Crowder</td>
-<td width=50>11/9</td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
 <td width=370></td>
 <td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Javorius Allen/Terrance West</td>
-<td width=50>10/11</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -215,8 +151,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Will Fuller/Eric Decker</td>
-<td width=50>10/11</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -227,8 +163,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>A Seferian-Jenkins/Elijah McGuire</td>
-<td width=50>11/8</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -239,8 +175,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Stephen Gostkowski/Mason Crosby</td>
-<td width=50>11/30</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -257,66 +193,130 @@
 </tr>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Nelson Agholor/OJ Howard</td>
-<td width=50>9/12</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Giorgio Tavecchio/Torrey Smith</td>
-<td width=50>9/20</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Adrian Peterson/Kerwynn Williams</td>
-<td width=50>10/12</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>JJ Nelson/Paul Perkins</td>
-<td width=50>9/21</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Duke Johnson/Jordan Matthews</td>
-<td width=50>10/12</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>JuJu Smith-Schuster/JJ Nelson</td>
-<td width=50>10/5</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>OJ Howard/Donte Moncrief</td>
-<td width=50>10/31</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Alex Smith/Andy Dalton</td>
-<td width=50>10/10</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Travis Benjamin/OJ Howard</td>
-<td width=50>11/12</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Kai Forbath/Giorgio Tavecchio</td>
-<td width=50>11/8</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 </table>
@@ -324,6 +324,7 @@
 <table border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
+<!--
 <tr><td width=50>9/3</td>
 <td width=500>
 Free Pickups:<br>
@@ -358,29 +359,10 @@ Team 6  - Nick Foles/Carson Wentz (12/12)<br>
 Team 6  - Kenny Stills/Jordan Reed (12/12)<br>
 Team 2  - Mike Davis/Ty Montgomery (12/12)
 </td></tr>
-<tr><td width=50>9/28</td>
+-->
+<tr><td width=50>8/28</td>
 <td width=500>
-Team 2  - Jamaal Williams<br>
-Team 3  - Jeremy Maclin, pickup (Stephen Hauschka/Vance McDonald 10/4)
-</td></tr>
-<tr><td width=50>10/3</td>
-<td width=500>
-Team 3  - Harrison Butker<br>
-Team 5  - Doug Martin
-</td></tr>
-<tr><td width=50>10/12</td>
-<td width=500>
-Team 2  - Evan Engram, Pierre Garcon<br>
-Team 8  - Alshon Jeffery, Tyler Eifert
-</td></tr>
-<tr><td width=50>10/16</td>
-<td width=500>
-Team 1  - Stephen Hauschka<br>
-Team 3  - Zay Jones
-</td></tr>
-<tr><td width=50>12/22</td>
-<td width=500>
-Team 2  - Greg Olsen, Cooper Kupp<br>
-Team 4  - Evan Engram, Jamaal Williams, pickup (Chris Boswell/Greg Zuerlein 12/22)
+Team 6  - Alvin Kamara<br>
+Team 10 - Sam Darnold
 </td></tr>
 </table>
