--- a/board18.html
+++ b/board18.html
@@ -177,7 +177,7 @@
     <td>Tyler<br>Lockett</td>
     <td>Stephen<br>Gostkowski</td>
     <td>Greg<br>Zuerlein</td>
-    <td>Devante<br>Parker</td>
+    <td>Devontae<br>Booker</td>
     <td>Jake<br>Elliott</td></tr>
 <tr><td>16</td>
     <td>Hayden<br>Hurst</td>
