--- a/roster.html
+++ b/roster.html
@@ -242,12 +242,12 @@
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>TEN</td><td>Dion Lewis             </td></tr>
 <tr><td> NE</td><td>Rex Burkhead           </td></tr>
+<tr><td>DEN</td><td>Devontae Booker        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>SEA</td><td>Doug Baldwin           </td></tr>
 <tr><td> NE</td><td>Chris Hogan            </td></tr>
 <tr><td>NYJ</td><td>Robby Anderson         </td></tr>
-<tr><td>MIA</td><td>Devante Parker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jack Doyle             </td></tr>
 <tr><td>WAS</td><td>Vernon Davis           </td></tr>
