--- a/roster.html
+++ b/roster.html
@@ -27,7 +27,7 @@
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Daniel Carlson         </td></tr>
-<tr><td>STL</td><td>John Kelly             </td></tr>
+<tr><td>LAR</td><td>John Kelly             </td></tr>
 <tr><td>BAL</td><td>Hayden Hurst           </td></tr>
 <tr><td>DAL</td><td>Bo Scarbrough          </td></tr>
 </table>
