--- a/pickups.html
+++ b/pickups.html
@@ -324,42 +324,13 @@
 <table border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
-<!--
-<tr><td width=50>9/3</td>
+<tr><td width=50>9/1</td>
 <td width=500>
 Free Pickups:<br>
-Team 5  - Brandon McManus/Sam Ficken
+Team 9  - Alfred Morris/Greg Joseph (9/1)<br>
+Team 4  - Phillip Lindsay/Matt McCrane (9/4)<br>
+Team 1  - James Conner/Bo Scarbrough (9/4)
 </td></tr>
-<tr><td width=50>9/3</td>
-<td width=500>
-Injured Reserve Pickups:<br>
-Team 3  - Paul Richardson/Joe Williams (9/11)<br>
-Team 9  - Kerwynn Williams/Allen Robinson (9/12)<br>
-Team 5  - Javorius Allen/Danny Woodhead (9/12)<br>
-Team 3  - Jared Cook/Kevin White (9/13)<br>
-Team 8  - Chris Thompson/Bucky Hodges (9/19)<br>
-Team 4  - Jason Witten/Greg Olsen (9/21)<br>
-Team 1  - Andre Ellington/Cairo Santos (10/3)<br>
-Team 4  - Greg Zuerlein/Dalvin Cook (10/3)<br>
-Team 8  - Elijah McGuire/Corey Coleman (10/4)<br>
-Team 5  - Devin Funchess/Odell Beckham (10/11)<br>
-Team 8  - Robbie Gould/Tyler Eifert (10/26)<br>
-Team 9  - Mike Nugent/Dustin Hopkins (10/31)<br>
-Team 8  - Jared Goff/Andrew Luck (10/31)<br>
-Team 5  - George Kittle/Carson Palmer (11/5)<br>
-Team 2  - Marvin Jones/Pierre Garcon (11/6)<br>
-Team 3  - Teddy Bridgewater/Aaron Rodgers (11/7)<br>
-Team 5  - Wayne Gallman/Deshaun Watson (11/7)<br>
-Team 7  - Ryan Succop/Sebastian Janikowski (11/9)<br>
-Team 8  - Dion Lewis/Chris Thompson (11/21)<br>
-Team 3  - Case Keenum/D'onta Foreman (11/29)<br>
-Team 1  - Ricky Seals-Jones/Jeremy Hill (12/5)<br>
-Team 9  - Rex Burkhead/Martellus Bennett (12/10)<br>
-Team 6  - Nick Foles/Carson Wentz (12/12)<br>
-Team 6  - Kenny Stills/Jordan Reed (12/12)<br>
-Team 2  - Mike Davis/Ty Montgomery (12/12)
-</td></tr>
--->
 <tr><td width=50>8/28</td>
 <td width=500>
 Team 6  - Alvin Kamara<br>
