--- a/roster.html
+++ b/roster.html
@@ -16,6 +16,7 @@
 <tr><td>MIN</td><td>Latavius Murray        </td></tr>
 <tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td>MIA</td><td>Frank Gore             </td></tr>
+<tr><td>PIT</td><td>James Conner           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Stefon Diggs           </td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
@@ -29,7 +30,6 @@
 <tr><td>MIN</td><td>Daniel Carlson         </td></tr>
 <tr><td>LAR</td><td>John Kelly             </td></tr>
 <tr><td>BAL</td><td>Hayden Hurst           </td></tr>
-<tr><td>DAL</td><td>Bo Scarbrough          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -114,8 +114,8 @@
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
-<tr><td>ARI</td><td>Matt McCrane           </td></tr>
 <tr><td>ATL</td><td>David Marvin           </td></tr>
+<tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -243,6 +243,7 @@
 <tr><td>TEN</td><td>Dion Lewis             </td></tr>
 <tr><td> NE</td><td>Rex Burkhead           </td></tr>
 <tr><td>DEN</td><td>Devontae Booker        </td></tr>
+<tr><td> SF</td><td>Alfred Morris          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>SEA</td><td>Doug Baldwin           </td></tr>
@@ -256,7 +257,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Josh Rosen             </td></tr>
 <tr><td>MIA</td><td>Kalen Ballage          </td></tr>
-<tr><td>MIA</td><td>Greg Joseph            </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 </table>
 </td>
