--- a/thousand.html
+++ b/thousand.html
@@ -687,6 +687,12 @@
     <td>1030</td>
     <td>John</td>
     <td>645</td></tr>
+<tr><td>2018</td>
+    <td>Week 1</td>
+    <td>Randy Edwards</td>
+    <td>1030</td>
+    <td>Rich</td>
+    <td>725</td></tr>
 <tr><td>2003</td>
     <td>Week 13</td>
     <td>Rich Fleck</td>
