--- a/week1.html
+++ b/week1.html
@@ -141,7 +141,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>240</td></tr>
-<tr><td>Gordon</td>        <td></td><td align=right>90</td></tr>
+<tr><td>MGordon</td>       <td></td><td align=right>90</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>150</td></tr>
 <tr><td>CDavis</td>        <td></td><td align=right>30</td></tr>
 <tr><td>Reed</td>          <td></td><td align=right>50</td></tr>
