--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,88 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>Final 2017 Free Agent Leaderboard</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2018 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Josh McCown            </td><td><font size=3>1730</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Andy Dalton            </td><td><font size=3>1695</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>1545</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jay Cutler             </td><td><font size=3>1190</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Brett Hundley          </td><td><font size=3> 950</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Trevor Siemian         </td><td><font size=3> 930</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Carson Palmer          </td><td><font size=3> 800</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Blaine Gabbert         </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Brock Osweiler         </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Tom Savage             </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Drew Stanton           </td><td><font size=3> 390</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Brian Hoyer            </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Matt Moore             </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Kevin Hogan            </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 450</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Case Keenum            </td><td><font size=3> 255</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Alex Smith             </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Derek Carr             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Eli Manning            </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Blake Bortles          </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Corey Grant            </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>Rod Smith              </td><td><font size=3> 460</td></tr>
-<tr><td><font size=3>Jalen Richard          </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>TJ Yeldon              </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>JD McKissic            </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Peyton Barber          </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>DeAndre Washington     </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Chris Ivory            </td><td><font size=3> 220</td></tr>
-<tr><td><font size=3>Benny Cunningham       </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Bobby Rainey           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Kerwynn Williams       </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>Devontae Booker        </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>Tommy Bohanon          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 140</td></tr>
-<tr><td><font size=3>Terrance West          </td><td><font size=3> 140</td></tr>
+<tr><td><font size=3>Austin Ekeler          </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Anthony Sherman        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>James White            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>TJ Yeldon              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Javorius Allen         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Alex Armah             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Alfred Blue            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Kenneth Dixon          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Jalen Richard          </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Robert Woods           </td><td><font size=3> 750</td></tr>
-<tr><td><font size=3>Ted Ginn               </td><td><font size=3> 740</td></tr>
-<tr><td><font size=3>Jermaine Kearse        </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Rishard Matthews       </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Josh Doctson           </td><td><font size=3> 645</td></tr>
-<tr><td><font size=3>Mohamed Sanu           </td><td><font size=3> 635</td></tr>
-<tr><td><font size=3>Tyler Lockett          </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>Cordarrelle Patterson  </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Mike Wallace           </td><td><font size=3> 510</td></tr>
-<tr><td><font size=3>Jaron Brown            </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>Ryan Grant             </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>Marqise Lee            </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>Albert Wilson          </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Johnny Holton          </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>Kenny Stills           </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Jakeem Grant           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Darius Jennings        </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Andre Roberts          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Randall Cobb           </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>Ted Ginn               </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Geronimo Allison       </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Quincy Enunwa          </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Cooper Kupp            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Brandon Marshall       </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Phillip Dorsett        </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>John Brown             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Chris Godwin           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Willie Snead           </td><td><font size=3>  75</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 640</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 500</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Trey Burton            </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Tyler Kroft            </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 460</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jared Cook             </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Garrett Celek          </td><td><font size=3> 390</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Marcedes Lewis         </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Benjamin Watson        </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Luke Willson           </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Julius Thomas          </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Darren Fells           </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Nick O'Leary           </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>AJ Derby               </td><td><font size=3> 240</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Jared Cook             </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jesse James            </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Antonio Gates          </td><td><font size=3>   5</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>1630</td></tr>
-<tr><td><font size=3>Phil Dawson            </td><td><font size=3>1265</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3>1110</td></tr>
-<tr><td><font size=3>Chandler Catanzaro     </td><td><font size=3>1065</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 910</td></tr>
-<tr><td><font size=3>Josh Lambo             </td><td><font size=3> 780</td></tr>
-<tr><td><font size=3>Patrick Murray         </td><td><font size=3> 745</td></tr>
-<tr><td><font size=3>Giorgio Tavecchio      </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 715</td></tr>
-<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>Connor Barth           </td><td><font size=3> 470</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Nick Rose              </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>Ryan Succop            </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3>  95</td></tr>
+<tr><td><font size=3>Chandler Catanzaro     </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Cody Parkey            </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Caleb Sturgis          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Mike Nugent            </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3>  60</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Sebastian Janikowski   </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>OJ Howard              </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>David Njoku            </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Elijah McGuire         </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>D'onta Foreman         </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Trey Edmunds           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Jonnu Smith            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Ryan Switzer           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>Mack Hollins           </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Taywan Taylor          </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Adam Shaheen           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Gerald Everett         </td><td><font size=3> 145</td></tr>
-<tr><td><font size=3>Trent Taylor           </td><td><font size=3> 145</td></tr>
-<tr><td><font size=3>Younghoe Koo           </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Dante Pettis           </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Will Dissly            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Matt McCrane           </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Bo Scarbrough          </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
