--- a/strength.html
+++ b/strength.html
@@ -4,104 +4,104 @@
 </table>
 <table border=2>
 <tr><td><b>Position</b></td>
-    <td width=42><b>Randy</b></td>
-    <td width=42><b>Sam</b></td>
     <td width=42><b>States</b></td>
-    <td width=42><b>Grant</b></td>
-    <td width=42><b>Matthew</b></td>
-    <td width=42><b>John</b></td>
     <td width=42><b>Rich</b></td>
+    <td width=42><b>Roger</b></td>
+    <td width=42><b>Matthew</b></td>
     <td width=42><b>Steven</b></td>
+    <td width=42><b>Grant</b></td>
     <td width=42><b>Mike</b></td>
-    <td width=42><b>Roger</b></td></tr>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>John</b></td>
+    <td width=42><b>Sam</b></td></tr>
 <tr><td align='right'>QB</td>
-    <td align='right'>1765</td>
-    <td align='right'>2555</td>
-    <td align='right'>1990</td>
-    <td align='right'>1980</td>
-    <td align='right'>1640</td>
-    <td align='right'>2755</td>
-    <td align='right'>2305</td>
-    <td align='right'>2570</td>
-    <td align='right'>1990</td>
-    <td align='right'>2080</td></tr>
-<tr><td align='right'>Best RB</td>
-    <td align='right'>740</td>
-    <td align='right'>1530</td>
-    <td align='right'>1285</td>
-    <td align='right'>2275</td>
-    <td align='right'>785</td>
-    <td align='right'>905</td>
-    <td align='right'>915</td>
-    <td align='right'>585</td>
-    <td align='right'>1555</td>
-    <td align='right'>1280</td></tr>
-<tr><td align='right'>Other RB's</td>
-    <td align='right'>670</td>
-    <td align='right'>715</td>
-    <td align='right'>1240</td>
-    <td align='right'>1135</td>
-    <td align='right'>1350</td>
-    <td align='right'>1155</td>
-    <td align='right'>975</td>
-    <td align='right'>855</td>
-    <td align='right'>665</td>
-    <td align='right'>1060</td></tr>
-<tr><td align='right'>Best WR</td>
-    <td align='right'>1180</td>
-    <td align='right'>1155</td>
-    <td align='right'>1740</td>
-    <td align='right'>1120</td>
-    <td align='right'>615</td>
-    <td align='right'>835</td>
-    <td align='right'>935</td>
-    <td align='right'>880</td>
-    <td align='right'>875</td>
-    <td align='right'>970</td></tr>
-<tr><td align='right'>Other WR's</td>
-    <td align='right'>730</td>
-    <td align='right'>1310</td>
-    <td align='right'>1240</td>
-    <td align='right'>1510</td>
-    <td align='right'>1370</td>
-    <td align='right'>1150</td>
-    <td align='right'>880</td>
-    <td align='right'>1360</td>
-    <td align='right'>910</td>
-    <td align='right'>1130</td></tr>
-<tr><td align='right'>TE</td>
-    <td align='right'>1150</td>
-    <td align='right'>595</td>
+    <td align='right'>10</td>
+    <td align='right'>270</td>
     <td align='right'>260</td>
-    <td align='right'>410</td>
-    <td align='right'>685</td>
-    <td align='right'>530</td>
-    <td align='right'>840</td>
-    <td align='right'>1165</td>
+    <td align='right'>75</td>
+    <td align='right'>270</td>
+    <td align='right'>25</td>
+    <td align='right'>190</td>
+    <td align='right'>160</td>
+    <td align='right'>130</td>
+    <td align='right'>235</td></tr>
+<tr><td align='right'>Best RB</td>
+    <td align='right'>290</td>
+    <td align='right'>100</td>
+    <td align='right'>50</td>
+    <td align='right'>80</td>
+    <td align='right'>190</td>
+    <td align='right'>240</td>
+    <td align='right'>100</td>
+    <td align='right'>45</td>
+    <td align='right'>30</td>
+    <td align='right'>120</td></tr>
+<tr><td align='right'>Other RB's</td>
+    <td align='right'>125</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>90</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td></tr>
+<tr><td align='right'>Best WR</td>
+    <td align='right'>100</td>
+    <td align='right'>195</td>
+    <td align='right'>145</td>
+    <td align='right'>50</td>
+    <td align='right'>165</td>
+    <td align='right'>150</td>
+    <td align='right'>115</td>
     <td align='right'>455</td>
-    <td align='right'>620</td></tr>
+    <td align='right'>35</td>
+    <td align='right'>55</td></tr>
+<tr><td align='right'>Other WR's</td>
+    <td align='right'>55</td>
+    <td align='right'>80</td>
+    <td align='right'>50</td>
+    <td align='right'>40</td>
+    <td align='right'>80</td>
+    <td align='right'>30</td>
+    <td align='right'>0</td>
+    <td align='right'>145</td>
+    <td align='right'>0</td>
+    <td align='right'>35</td></tr>
+<tr><td align='right'>TE</td>
+    <td align='right'>160</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>50</td>
+    <td align='right'>75</td>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>K</td>
-    <td align='right'>1230</td>
-    <td align='right'>1380</td>
-    <td align='right'>1585</td>
-    <td align='right'>1430</td>
-    <td align='right'>1565</td>
-    <td align='right'>715</td>
-    <td align='right'>1165</td>
-    <td align='right'>1040</td>
-    <td align='right'>890</td>
-    <td align='right'>910</td></tr>
+    <td align='right'>70</td>
+    <td align='right'>80</td>
+    <td align='right'>45</td>
+    <td align='right'>100</td>
+    <td align='right'>15</td>
+    <td align='right'>25</td>
+    <td align='right'>75</td>
+    <td align='right'>135</td>
+    <td align='right'>100</td>
+    <td align='right'>30</td></tr>
 <tr><td align='right'>R</td>
-    <td align='right'>695</td>
-    <td align='right'>1200</td>
-    <td align='right'>1395</td>
-    <td align='right'>1175</td>
-    <td align='right'>1855</td>
-    <td align='right'>1720</td>
-    <td align='right'>245</td>
-    <td align='right'>2360</td>
-    <td align='right'>645</td>
-    <td align='right'>1130</td></tr>
+    <td align='right'>60</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>250</td>
+    <td align='right'>0</td>
+    <td align='right'>35</td>
+    <td align='right'>65</td>
+    <td align='right'>0</td>
+    <td align='right'>175</td></tr>
 <tr><td align='right'></td>
     <td align='right'></td>
     <td align='right'></td>
@@ -114,14 +114,14 @@
     <td align='right'></td>
     <td align='right'></td></tr>
 <tr><td align='right'>Total</td>
-    <td align='right'>8160</td>
-    <td align='right'>10440</td>
-    <td align='right'>10735</td>
-    <td align='right'>11035</td>
-    <td align='right'>9865</td>
-    <td align='right'>9765</td>
-    <td align='right'>8260</td>
-    <td align='right'>10815</td>
-    <td align='right'>7985</td>
-    <td align='right'>9180</td></tr>
+    <td align='right'>870</td>
+    <td align='right'>725</td>
+    <td align='right'>575</td>
+    <td align='right'>345</td>
+    <td align='right'>995</td>
+    <td align='right'>610</td>
+    <td align='right'>590</td>
+    <td align='right'>1030</td>
+    <td align='right'>325</td>
+    <td align='right'>650</td></tr>
 </table>
