--- a/pickups.html
+++ b/pickups.html
@@ -139,8 +139,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Austin Ekeler/Greg Olsen</td>
+<td width=50>9/11</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -262,8 +262,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dante Pettis/Devontae Booker</td>
+<td width=50>9/14</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -329,7 +329,11 @@
 Free Pickups:<br>
 Team 9  - Alfred Morris/Greg Joseph (9/1)<br>
 Team 4  - Phillip Lindsay/Matt McCrane (9/4)<br>
-Team 1  - James Conner/Bo Scarbrough (9/4)
+Team 1  - James Conner/Bo Scarbrough (9/4)<br>
+Team 4  - Jared Cook/David Marvin (9/11)<br>
+Team 10 - Randall Cobb/Kaare Vedvik (9/11)<br>
+Team 6  - TJ Yeldon/KhaDarel Hodge (9/11)<br>
+Team 8  - Kenny Stills/Jerick McKinnon (9/12)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=500>
