--- a/roster.html
+++ b/roster.html
@@ -108,13 +108,13 @@
 <tr><td>DEN</td><td>Emmanuel Sanders       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
+<tr><td>OAK</td><td>Jared Cook             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
-<tr><td>ATL</td><td>David Marvin           </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 </table>
 </td>
@@ -156,6 +156,8 @@
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
 <tr><td> TB</td><td>Peyton Barber          </td></tr>
 <tr><td> SF</td><td>Matt Breida            </td></tr>
+<tr><td>JAX</td><td>TJ Yeldon              </td></tr>
+<tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>CLE</td><td>Josh Gordon            </td></tr>
@@ -163,7 +165,6 @@
 <tr><td>NYG</td><td>Sterling Shepard       </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CAR</td><td>Greg Olsen             </td></tr>
 <tr><td>WAS</td><td>Jordan Reed            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
@@ -171,7 +172,6 @@
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>IND</td><td>Jordan Wilkins         </td></tr>
 <tr><td>PIT</td><td>James Washington       </td></tr>
-<tr><td>LAR</td><td>KhaDarel Hodge         </td></tr>
 </table>
 </td>
 </tr>
@@ -211,7 +211,6 @@
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
-<tr><td> SF</td><td>Jerick McKinnon        </td></tr>
 <tr><td>HOU</td><td>Lamar Miller           </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
 <tr><td>IND</td><td>Marlon Mack            </td></tr>
@@ -220,6 +219,7 @@
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>DET</td><td>Golden Tate            </td></tr>
+<tr><td>MIA</td><td>Kenny Stills           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
@@ -242,7 +242,6 @@
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>TEN</td><td>Dion Lewis             </td></tr>
 <tr><td> NE</td><td>Rex Burkhead           </td></tr>
-<tr><td>DEN</td><td>Devontae Booker        </td></tr>
 <tr><td> SF</td><td>Alfred Morris          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>DeAndre Hopkins        </td></tr>
@@ -258,6 +257,7 @@
 <tr><td>ARI</td><td>Josh Rosen             </td></tr>
 <tr><td>MIA</td><td>Kalen Ballage          </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
+<tr><td> SF</td><td>Dante Pettis           </td></tr>
 </table>
 </td>
 </tr>
@@ -277,6 +277,7 @@
 <tr><td>NYG</td><td>Odell Beckham          </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
+<tr><td> GB</td><td>Randall Cobb           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>CHI</td><td>Trey Burton            </td></tr>
@@ -287,7 +288,6 @@
 <tr><td>SEA</td><td>Rashaad Penny          </td></tr>
 <tr><td>CLE</td><td>Baker Mayfield         </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
-<tr><td>BAL</td><td>Kaare Vedvik           </td></tr>
 </table>
 </td>
 <td>
