--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1</b></a><br>
+<a href="week1.html"><b>1</b></a>
+<a href="week2.html"><b>2</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -58,44 +59,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Steven(5)</font></td>
-    <td><font size=2>1</font></td>
+<tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1830</font></td>
+    <td><font size=2>1375</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>870</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Steven(5)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1605</font></td>
+    <td><font size=2>1130</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>610</font></td>
-    <td><font size=2>995</font></td>
-    <td><font size=2>995</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>590</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>870</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>575</font></td>
-    <td><font size=2>325</font></td>
-    <td><font size=2>575</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1360</font></td>
+    <td><font size=2>1285</font></td>
+    <td><font size=2>785</font></td>
     <td><font size=2>575</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
-    <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1125</font></td>
+    <td><font size=2>1345</font></td>
     <td><font size=2>590</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>590</font></td>
-    <td><font size=2>590</font></td>
+    <td><font size=2>535</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>325</font></td>
-    <td><font size=2>575</font></td>
-    <td><font size=2>325</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>1110</font></td>
+    <td><font size=2>475</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
@@ -106,44 +107,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Sam(10)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1465</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>815</font></td>
+    <td><font size=2>650</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1030</font></td>
-    <td><font size=2>725</font></td>
-    <td><font size=2>1030</font></td>
-    <td><font size=2>1030</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>650</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>650</font></td>
-    <td><font size=2>650</font></td>
+    <td><font size=2>1645</font></td>
+    <td><font size=2>1540</font></td>
+    <td><font size=2>1030</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Grant(6)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1215</font></td>
+    <td><font size=2>1600</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>605</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>1640</font></td>
     <td><font size=2>725</font></td>
-    <td><font size=2>1030</font></td>
-    <td><font size=2>725</font></td>
-    <td><font size=2>725</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>610</font></td>
-    <td><font size=2>995</font></td>
-    <td><font size=2>610</font></td>
-    <td><font size=2>610</font></td>
+    <td><font size=2>520</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>650</font></td>
-    <td><font size=2>345</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>950</font></td>
+    <td><font size=2>1255</font></td>
+    <td><font size=2>605</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>0</font></td></tr>
 </table>
